# anonnet

./: .gitignore  ANON_SERVICE_IMPLEMENTATION.md  BUILD_MACOS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DISTRIBUTION.md  IMPLEMENTATION_STATUS.md  QUICK_TEST.md  README.md  TESTING_INFRASTRUCTURE.md  TEST_RESULTS.md  TROUBLESHOOTING.md  build-macos.sh
browser/: CHANGELOG.md  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  node.rs
crates/core/src/circuit/: builder.rs  crypto.rs  manager.rs  mod.rs  path_selection.rs  pool.rs  relay.rs  stream.rs  types.rs
crates/core/src/consensus/: block.rs  ledger.rs  mod.rs  transaction.rs  validator.rs
crates/core/src/dht/: kbucket.rs  lookup.rs  mod.rs  routing_table.rs  storage.rs
crates/core/src/identity/: identity.rs  keypair.rs  mod.rs  node_id.rs  pow.rs
crates/core/src/network/: bandwidth.rs  connection_manager.rs  message_dispatcher.rs  message_handler.rs  mod.rs  rate_limit.rs
crates/core/src/peer/: manager.rs  mod.rs
crates/core/src/protocol/: messages.rs
crates/core/src/service/: address.rs  descriptor.rs  directory.rs  mod.rs  rendezvous.rs
crates/core/src/transport/: connection.rs  endpoint.rs  mod.rs  stream.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs
crates/daemon/src/api/: handlers.rs  mod.rs  responses.rs  server.rs
crates/daemon/src/proxy/: http.rs  mod.rs  socks5.rs
deployment/: README.md
docs/: ARCHITECTURE.md  BROWSER_USAGE.md  HOSTING_GUIDE.md  QUICK_REFERENCE.md
examples/: generate_anon_address.rs
scripts/: debug-network.sh  force-cleanup.sh  (+2 more)
(+38 files in other folders)
