[package]
name = "anonnet-core"
version.workspace = true
edition.workspace = true

[dependencies]
anonnet-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2.1"
rand = "0.8"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
chacha20poly1305 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"