[package]
name = "anonnet-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anonnet-common = { path = "../common" }
anonnet-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"